# idealista-portugal

./: .dockerignore  .gitignore  Dockerfile  README.md  brief.md  cleanup_old_tests.py  clear_webhooks.py  conftest.py  debug_monitoring.py  debug_pagination.py  docker-compose.yml  fly.toml  move_tests.py  pagination_analysis.md  pyproject.toml  pytest.ini  requirements.txt  simple_pagination_test.py  stop_bot.py  test_furniture_changes.py  test_furniture_filtering.py  test_pagination.py  test_pagination_debug.py  test_upgraded_image.py  test_url_fix.py
.github/workflows/: ci.yml  fly-deploy.yml
src/: analyze_images.py  bot.py  conftest.py  filters.py  models.py  scraper.py  test_adaptive_rate_limiting.py  test_bot.py  test_bot_flow.py  test_configuration_validation.py  test_integration_complete.py  test_models.py  test_monitoring_debugging.py  test_new_bot_features.py  test_pagination_behavior.py  test_scraper.py  test_scraper_enhanced.py  test_url_generation.py  test_user_stats.py  user_stats.py
tests/: README.md  conftest.py  test_adaptive_rate_limiting.py  test_bot.py  test_bot_floor_filtering.py  test_bot_flow.py  test_configuration_validation.py  test_floor_backward_compatibility.py  test_floor_filtering.py  test_furniture_filtering.py  test_image_functionality.py  test_integration_complete.py  test_models.py  test_monitoring_debugging.py  test_new_bot_features.py  test_pagination_behavior.py  test_pagination_debug.py  test_pagination_url_construction.py  test_scraper.py  test_scraper_enhanced.py  test_url_generation.py  test_user_stats.py
